# givemeone

./: README.md  __main__.py  e816e3b5-b21a-41d3-99d9-4e2fa4dfc26d.md  pyproject.toml
.github/workflows/: python-app.yml
givemeone/: libgivemeone.py
givemeone/ext/: _template.py  c.py  jpg.py  md.py  png.py  py.py  txt.py
tests/: test.py
