[project]
name = ""
version = ""
description = ""
authors = [
    {name = "winterreisender", email = "winterreisender@qq.com"},
]
dependencies = [
    "tqdm>=4.66.1",
    "faker>=19.12.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-3.0-only"}

[tool.pdm.dev-dependencies]
dev = [
]
