[project]
name = "givemeone"
version = "0.0.1"
description = "[Experimental]Give me one random file (jpg, md, txt, etc)."
authors = [
    {name = "winterreisender", email = "winterreisender@qq.com"},
]
dependencies = [
    "tqdm>=4.66.1",
    "faker>=19.12.0",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "GPL-3.0-only"}

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=6.1.0",
]

[tool.pdm.scripts]
dist = """pdm run pyinstaller -F __main__.py
    --hidden-import givemeone.ext.txt 
    --hidden-import givemeone.ext.jpg 
    --hidden-import givemeone.ext.png 
    --hidden-import givemeone.ext.md 
    --hidden-import givemeone.ext.c 
    --hidden-import givemeone.ext.py
    """